managers and images
needs images PR

--- a/templates/inventory/_dialogs.html
+++ b/templates/inventory/_dialogs.html
@@ -1,4 +1,5 @@
 <q-dialog
+  v-if="inventoryDialog"
   v-model="inventoryDialog.show"
   position="top"
   @hide="closeInventoryDialog"
@@ -96,12 +97,15 @@
   </q-card>
 </q-dialog>
 
+<!-- TODO: Make the whole dialog a component -->
 <q-dialog
+  v-if="itemDialog"
   v-model="itemDialog.show"
   persistent
   maximized
   transition-show="slide-up"
   transition-hide="slide-down"
+  @hide="closeItemDialog"
 >
   <q-card class="">
     <q-bar class="q-mb-md">
@@ -152,12 +156,12 @@
       ></q-select> -->
         </div>
         <div class="col-12 col-md-6">
-          <q-input
-            filled
-            v-model.trim="itemDialog.data.images"
-            label="Image URL"
-            placeholder="URL of the item image"
-          ></q-input>
+          <photo-gallery-form
+            v-model="itemDialog.gallery"
+            :max="5"
+            label="Item Photos (Optional)"
+            hint="Upload images to the item."
+          ></photo-gallery-form>
         </div>
       </div>
       <separator-text text="Pricing"></separator-text>
@@ -285,6 +289,7 @@
 </q-dialog>
 
 <q-dialog
+  v-if="managerDialog"
   v-model="managerDialog.show"
   position="top"
   @hide="closeManagerDialog"
@@ -321,6 +326,60 @@
           :disable="!managerDialog.data.name"
           type="submit"
           >Create Manager</q-btn
+        >
+      </q-card-actions>
+    </q-form>
+  </q-card>
+</q-dialog>
+
+<q-dialog
+  v-if="serviceDialog"
+  v-model="serviceDialog.show"
+  position="top"
+  @hide="closeServiceDialog"
+>
+  <q-card class="q-pa-lg q-pt-xl" style="width: 500px">
+    <q-form @submit="submitServiceData" class="q-gutter-md">
+      <q-input
+        filled
+        dense
+        v-model.trim="serviceDialog.data.service_name"
+        label="Service Name *"
+        hint="Service identifier for your reference"
+      ></q-input>
+      <q-input
+        filled
+        dense
+        v-model.trim="serviceDialog.data.description"
+        label="Service Description (Optional)"
+      ></q-input>
+      <q-select
+        filled
+        dense
+        multiple
+        use-chips
+        v-model="serviceDialog.data.tags"
+        :options="inventory.tags"
+        label="Tags"
+        hint="Select item tags this service can access. Leave empty to allow all tags."
+      ></q-select>
+      <q-card-actions class="q-mt-lg" align="between">
+        <q-btn v-close-popup flat color="grey">Cancel</q-btn>
+        <q-btn
+          v-if="serviceDialog.data.id"
+          unelevated
+          color="primary"
+          type="submit"
+          :disable="!serviceDialog.data.service_name"
+          >Update Service</q-btn
+        >
+        <q-btn
+          v-else
+          unelevated
+          color="primary"
+          :disable="!serviceDialog.data.service_name"
+          type="submit"
+          >Create Service</q-btn
         >
       </q-card-actions>
     </q-form>
