--- a/templates/inventory/_dialogs.html
+++ b/templates/inventory/_dialogs.html
@@ -20,6 +20,7 @@
         v-model="inventoryDialog.data.currency"
         :options="currencyOptions"
         label="Currency *"
+        :disable="inventoryDialog.data.id !== null"
       ></q-select>
       <q-select
         filled
@@ -166,27 +167,28 @@
       </div>
       <separator-text text="Pricing"></separator-text>
       <div class="row q-col-gutter-md">
-        <!-- <div class="col-12 text-subtitle1">Pricing</div> -->
         <div class="col-12 col-sm-6 col-md-3">
           <q-input
             filled
             v-model.number="itemDialog.data.price"
-            min="0.00"
-            step="0.01"
-            type="number"
-            label="Price *"
-            placeholder="How much you want to sell this item for."
+            :min="0"
+            :pattern="itemDialog.currency === 'sats' ? '\\d*' : '\\d*\\.?\\d*'"
+            inputmode="numeric"
+            :label="`Price (${itemDialog.currency}) *`"
+            hint="How much you want to sell this item for."
+            input-class="text-right"
           ></q-input>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
           <q-input
             filled
             v-model.number="itemDialog.data.unit_cost"
-            min="0.00"
-            step="0.01"
-            type="number"
-            label="Unit Cost *"
-            placeholder="Your cost per unit"
+            :min="0"
+            :pattern="itemDialog.currency === 'sats' ? '\\d*' : '\\d*\\.?\\d*'"
+            inputmode="numeric"
+            :label="`Unit Cost (${itemDialog.currency}) *`"
+            hint="Your cost per unit"
+            input-class="text-right"
           ></q-input>
         </div>
         <div class="col-12 col-sm-6 col-md-3">
